# InferX

./: .gitignore  CMakeLists.txt  README.md
cmake/: cuda.cmake
doc/: debug.md
doc/kernels/: 已实现kernel.md
include/: utils.h
include/core/: allocator.h  buffer.h  common.h  cuda_helper.h  nonecopyable.h  status.h  tensor.h
include/graph/: graph.h  graph_edge.h  graph_node.h
include/graph/pnnx/: ir.h  store_zip.h
include/layer/: layer.h  layer_factory.h
include/layer/kernels/: activation.h  activation_type.h  adaptive_avgpooling.h  batchnorm2d.h  cat.h  clamp.h  convolution2d.h  expression.h  flatten.h  hard_sigmoid.h  hard_swish.h  linear.h  maxpooling.h  permute.h  relu.h  relu6.h  sigmoid.h  silu.h  tanh.h  unary.h  upsample.h  view.h
include/parser/: parser.h
include/utils/: utils.h
src/core/: allocator.cpp  tensor.cpp
src/graph/: graph.cpp
src/graph/pnnx/: ir.cpp  store_zip.cpp
src/layer/: layer_factory.cpp
src/layer/kernels/: activation.cpp  adaptive_avgpooling.cpp  batchnorm2d.cpp  cat.cpp  clamp.cpp  convolution2d.cpp  expression.cpp  flatten.cpp  hard_sigmoid.cpp  hard_swish.cpp  linear.cpp  maxpooling.cpp  permute.cpp  relu.cpp  relu6.cpp  sigmoid.cpp  silu.cpp  tanh.cpp  upsample.cpp  view.cpp
src/layer/kernels/cpu/: activation_cpu.cpp  adaptive_avgpooling_cpu.cpp  batchnorm2d_cpu.cpp  cat_cpu.cpp  clamp_cpu.cpp  convolution2d_cpu.cpp  expression_cpu.cpp  flatten_cpu.cpp  linear_cpu.cpp  maxpooling_cpu.cpp  permute_cpu.cpp  relu_cpu.cpp  upsample_cpu.cpp  view_cpu.cpp
src/layer/kernels/cuda/: activation_cuda.cu  adaptive_avgpooling.cu  batchnorm2d_cuda.cu  cat_cuda.cu  clamp_cuda.cu  convolution2d_cuda.cu  expression_cuda.cu  flatten_cuda.cu  linear_cuda.cu  maxpooling.cu  permute_cuda.cu  relu_cuda.cu  unary_cuda.cu  upsample_cuda.cu  view_cuda.cu
src/parser/: parser.cpp
src/utils/: timer.h  utils.cpp
test/: test_graph.cpp
test/test_adaptiveAvgPooling/: check.py  test_adaptiveAvgPooling.cpp
test/test_adaptiveAvgPooling/test_data/: output1.txt  output2.txt  output3.txt
test/test_broadcast/: test_broadcast.py
test/test_convolution2d/: check.py  convolution_optimize.md  test_convolution2d.cpp
test/test_convolution2d/test_data/: bias1.txt  bias2.txt  bias3.txt  bias4.txt  output1.txt  output2.txt  output3.txt  output4.txt  weight1.txt  weight2.txt  weight3.txt  weight4.txt
test/test_graph/: test_graph.cpp
test/test_hardsigmoid/: check.py  test_hardsigmoid.cpp
test/test_hardswish/: check.py  test_hardswish.cpp
test/test_im2col/: check.py  test_im2col.cpp
test/test_im2col/test_data/: col1.txt  input.txt  weight1.txt
test/test_layers/test_conv2d/: conv2d.py
test/test_linear/: check.py  test_linear.cpp
test/test_linear/test_data/: bias1.txt  bias2.txt  bias3.txt  bias4.txt  input.txt  output1.txt  output2.txt  output3.txt  output4.txt  weight2.txt  weight3.txt  weight4.txt
test/test_maxpooling/: check.py  test_maxpooling.cpp
test/test_maxpooling/test_data/: output1.txt  output2.txt  output3.txt  output4.txt
test/test_mobilenet/: test_mobilenet.cpp
test/test_mobilenet_v2/: test_mobilenet_v2.cpp
test/test_parser/: test_parser.cpp
test/test_relu/: check.py  test_relu.cpp
test/test_resnet/: test_resnet.cpp
test/test_sigmoid/: check.py  test_sigmoid.cpp
test/test_tensor/: test_tensor.cpp
test/test_upsample/: check.py  test_upsample.cpp
